First view of the app
Create HTML grid design.
Refactor CSS reset.
Implement modular JS by utilizing moudles and IIFE pattern.
Create sidebar with toggling functionality.
Create dropdown menu functionality.
Create dashboard view.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "nodemon --watch . --exec \"electron .\" --ext js,json,html,css"
+    "dev": "nodemon --watch . --exec \"electron .\""
   },
   "keywords": [],
   "author": "",
